# TFM

./: README.md  pyproject.toml  requirements.txt
TFM-main/artifacts/models/: baseline_xgb.joblib  early_fusion_xgb.joblib
artifacts/metrics/: results.json
artifacts/models/: late_fusion_meta.joblib
resources/architecture/: Despliegue_Triage_Multimodal_IA.drawio  Documento_Arquitectura_Triage_Multimodal_IA.md  Flujo_Experimentacion_Triage_Multimodal_IA.drawio
resources/architecture/definitions/: Linea_Base_Triage_Multimodal.md
resources/functional/datasets/: Morbilidad_Urgencias_2019_Municipio_Pitalito_Huila_ESE_Hospital_Departamental_San_Antonio_de_Pitalito_20260713.csv
resources/functional/plans/: technical-plan.md
resources/functional/reqs/: 001-triaje-multimodal-ia-urgencias.md
src/: data_ingestor.py  embeddings.py  evaluator.py  explainer.py  main.py  models.py  preprocessor.py  trainer.py  utils.py
tests/: test_preprocessor.py
