[tool.poetry]
name = "triaje-multimodal-ia"
version = "0.1.0"
description = "Sistema de apoyo a la decisión clínica para triaje basado en IA multimodal"
authors = ["Equipo TFM <equipo@tfm.example>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.0"
numpy = "^1.25.0"
scikit-learn = "^1.3.0"
xgboost = "^2.0.0"
imbalanced-learn = "^0.11.0"
transformers = "^4.35.0"
sentence-transformers = "^2.2.0"
torch = "^2.1.0"
shap = "^0.44.0"
joblib = "^1.3.0"
pyyaml = "^6.0"
tqdm = "^4.66.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.2"
plotly = "^5.19.0"
pydantic = "^2.5.0"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
black = "^23.11.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
